# atom2remarkable

./: .gitignore  CLAUDE.md  Dockerfile  README.md  TOKEN_RETRIEVER.sh  action.yml  config.py  entrypoint.sh  feeds.txt  main.py  pyproject.toml  remarkable.py  requirements.txt  run.sh  setup.sh  test.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  test-action.yml
templates/: article.html  style.css
tests/: integration_test.py  test_config.py  test_processor.py  test_remarkable.py
